# theworldsandbox

./: Cargo.toml  README.md  tunnel.blend  tunnel.blend1
assets/: planet.glb
src/: app.rs  config.rs  main.rs  shader.wgsl
src/camera/: config.rs  mod.rs
src/control/: mod.rs
src/core/: config.rs
src/engine/: entity.rs  mod.rs  state.rs  texture.rs
src/light/: config.rs  mod.rs  sun.rs
src/render/: mod.rs  shader.wgsl  shadow.wgsl  skybox.wgsl
src/skybox/: mod.rs
src/world/: building.rs  mod.rs  planet.rs
